<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_plan_diet"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_plan_diet" />
        <item
            android:id="@+id/nav_search_recipe"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_search_receipt" />
        <item
            android:id="@+id/nav_convert_amounts"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_convert_amounts" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_get_random_receipt"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_random_receipt" />
            <item
                android:id="@+id/nav_food_videos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_food_videos" />

            <item
                android:id="@+id/nav_calorie_counter"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_calorie_counter" />
        </menu>
    </item>

</menu>